fix: scrollbar design
Change scrollbar design to match the theme and look better

--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -228,6 +228,24 @@ input:-webkit-autofill:active {
   h6 {
     @apply font-heading font-semibold tracking-tight;
   }
+
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: #e1e1e1 transparent;
+  }
+
+  .dark * {
+    scrollbar-width: thin;
+    scrollbar-color: #262626 transparent;
+  }
+
+  *::-webkit-scrollbar {
+    @apply w-2 h-2;
+  }
+
+  *::-webkit-scrollbar-track {
+    @apply bg-transparent;
+  }
 }
 
 @layer components {
